--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "eslint-config-next": "13.4.11",
     "next": "13.4.11",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "styled-components": "^6.0.4",
+    "swiper": "^10.0.4"
   }
 }
